[gd_scene load_steps=2 format=3 uid="uid://pause_menu"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_pause")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Save Game"

[node name="MainMenuButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
